added img block

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>Lorem ipsum dolor sit amet.</p>
     <div class="textas">
         <p>Testas testas testas</p>
+        <img src="" alt="">
     </div>
 </body>
 </html>
